@@ -1,5 +1,6 @@
 Date and Time              Change detail
    
+Mar 01, 2016   [5:08pm]    Step 3. Add a viewer rating widget.              - Gabriel 
 Mar 01, 2016   [4:13pm]    Step 2. Load css and javascript using caboose.   - Vivek
 Mar 01, 2016   [4:05pm]    Step 1. Enable hook.                             - Gabriel
 
